# unified-star-schema-demo

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  database_setup.py  pyproject.toml
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/models/mart/: bridge_orders.sql  bridge_orders.yml  uss_orders.sql
dbt/models/mart/dimensions/: customers.sql  customers.yml  geolocations.sql  geolocations.yml  order_items.sql  order_items.yml  order_payments.sql  order_payments.yml  order_reviews.sql  order_reviews.yml  orders.sql  orders.yml  products.sql  products.yml  sellers.sql  sellers.yml  users.sql  users.yml
dbt/models/mart/exposure/: uss_orders.yml
dbt/models/mart/reports/: uss_orders.sql  uss_orders.yml
dbt/models/sources/: olist_customers.yml  olist_order_items.yml  olist_order_reviews.yml  olist_orders.yml  olist_product_category_name_translation.yml  olist_products.yml  olist_sellers.yml
dbt/models/staging/: staging.yml  stg_customers.sql  stg_geolocations.sql  stg_order_items.sql  stg_order_payments.sql  stg_order_reviews.sql  stg_products.sql  stg_sellers.sql  stg_users.sql
dbt_uss_demo/: .user.yml  dbt_project.yml  profiles.yml
dbt_uss_demo/models/landing/: source.yml
dbt_uss_demo/models/landing/olist/: olist_closed_deals.yml  olist_customers.yml  olist_marketing_qualified_leads.yml  olist_order_items.yml  olist_order_payments.yml  (+4 more)
dbt_uss_demo/models/mart/: bridge_orders.sql  customers.sql  order_items.sql  order_payments.sql  order_reviews.sql  orders.sql  products.sql  sellers.sql
dbt_uss_demo/models/sources/: olist_customers.yml  olist_geolication.yml  olist_order_items.yml  olist_order_payments.yml  olist_order_reviews.yml  olist_orders.yml  olist_product_category_name_translation.yml  olist_products.yml  olist_sellers.yml
dbt_uss_demo/models/staging/: stg_sellers.sql
docs/: unified-star-schema.md
rill/: .gitignore  rill.yaml
rill/dashboards/: kpi_dashboard.yaml  rill_orders_metrics_explore.yaml
rill/metrics/: rill_orders_metrics.yaml
rill/sources/: rill_orders.yaml
